--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>🎁 Birthday Surprise - A Legendary Experience</title>
+    <title>Birthday Surprise - A Legendary Experience</title>
     <meta name="description" content="A cinematic birthday surprise experience with animated gift box, luxury car animations, and musical celebration. Discover your special surprise today!" />
+    
+    <!-- Birthday cake favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎁</text></svg>" />
     
     <!-- Preload fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
